# Copilot

./: README.md
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/tests/: test_auth.py
frontend/src/: App.css  App.jsx  index.css
